--- a/Predict the Criminals/Hackerearth challenge Predict the Criminals/Predict Criminals.ipynb
+++ b/Predict the Criminals/Hackerearth challenge Predict the Criminals/Predict Criminals.ipynb
@@ -95,19 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Dense(150, input_dim = X_train.shape[1]))\n",
-    "model.add(Dense(100))\n",
+    "model.add(Dense(100, input_dim = X_train.shape[1]))\n",
+    "model.add(Dense(150))\n",
     "model.add(Activation('softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -129,54 +129,54 @@
       "Training the model....\n",
       "Train on 32002 samples, validate on 13716 samples\n",
       "Epoch 1/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.3734 - acc: 0.9137 - val_loss: 0.1564 - val_acc: 0.9388\n",
+      "32002/32002 [==============================] - 2s - loss: 0.4151 - acc: 0.9121 - val_loss: 0.1661 - val_acc: 0.9392\n",
       "Epoch 2/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1575 - acc: 0.9359 - val_loss: 0.1496 - val_acc: 0.9335\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1557 - acc: 0.9365 - val_loss: 0.1762 - val_acc: 0.9342\n",
       "Epoch 3/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1517 - acc: 0.9365 - val_loss: 0.1465 - val_acc: 0.9353\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1528 - acc: 0.9370 - val_loss: 0.1483 - val_acc: 0.9389\n",
       "Epoch 4/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1506 - acc: 0.9365 - val_loss: 0.1504 - val_acc: 0.9329\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1498 - acc: 0.9364 - val_loss: 0.1600 - val_acc: 0.9310\n",
       "Epoch 5/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1496 - acc: 0.9373 - val_loss: 0.1481 - val_acc: 0.9396\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1500 - acc: 0.9360 - val_loss: 0.1463 - val_acc: 0.9381\n",
       "Epoch 6/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1481 - acc: 0.9362 - val_loss: 0.1418 - val_acc: 0.9358\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1483 - acc: 0.9369 - val_loss: 0.1461 - val_acc: 0.9404\n",
       "Epoch 7/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1460 - acc: 0.9373 - val_loss: 0.1482 - val_acc: 0.9358\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1478 - acc: 0.9372 - val_loss: 0.1704 - val_acc: 0.9310\n",
       "Epoch 8/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1447 - acc: 0.9368 - val_loss: 0.1572 - val_acc: 0.9287\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1467 - acc: 0.9370 - val_loss: 0.1481 - val_acc: 0.9394\n",
       "Epoch 9/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1460 - acc: 0.9372 - val_loss: 0.1443 - val_acc: 0.9372\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1453 - acc: 0.9371 - val_loss: 0.1474 - val_acc: 0.9388\n",
       "Epoch 10/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1447 - acc: 0.9369 - val_loss: 0.1495 - val_acc: 0.9378\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1450 - acc: 0.9373 - val_loss: 0.1572 - val_acc: 0.9350\n",
       "Epoch 11/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1440 - acc: 0.9369 - val_loss: 0.1453 - val_acc: 0.9409\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1454 - acc: 0.9368 - val_loss: 0.1473 - val_acc: 0.9388\n",
       "Epoch 12/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1432 - acc: 0.9378 - val_loss: 0.1450 - val_acc: 0.9326\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1437 - acc: 0.9379 - val_loss: 0.1439 - val_acc: 0.9390\n",
       "Epoch 13/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1435 - acc: 0.9368 - val_loss: 0.1422 - val_acc: 0.9386\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1432 - acc: 0.9380 - val_loss: 0.1478 - val_acc: 0.9387\n",
       "Epoch 14/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1418 - acc: 0.9377 - val_loss: 0.1659 - val_acc: 0.9345\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1438 - acc: 0.9370 - val_loss: 0.1421 - val_acc: 0.9401\n",
       "Epoch 15/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1422 - acc: 0.9373 - val_loss: 0.1429 - val_acc: 0.9358\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1429 - acc: 0.9378 - val_loss: 0.1662 - val_acc: 0.9304\n",
       "Epoch 16/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1424 - acc: 0.9373 - val_loss: 0.1702 - val_acc: 0.9327\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1431 - acc: 0.9370 - val_loss: 0.1435 - val_acc: 0.9351\n",
       "Epoch 17/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1426 - acc: 0.9372 - val_loss: 0.2515 - val_acc: 0.9313\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1429 - acc: 0.9380 - val_loss: 0.1460 - val_acc: 0.9393\n",
       "Epoch 18/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1487 - acc: 0.9370 - val_loss: 0.1444 - val_acc: 0.9332\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1431 - acc: 0.9374 - val_loss: 0.1460 - val_acc: 0.9393\n",
       "Epoch 19/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1425 - acc: 0.9365 - val_loss: 0.2049 - val_acc: 0.9358\n",
+      "32002/32002 [==============================] - 2s - loss: 0.1419 - acc: 0.9382 - val_loss: 0.1426 - val_acc: 0.9380\n",
       "Epoch 20/20\n",
-      "32002/32002 [==============================] - 2s - loss: 0.1648 - acc: 0.9368 - val_loss: 0.1566 - val_acc: 0.9347\n"
+      "32002/32002 [==============================] - 2s - loss: 0.1421 - acc: 0.9385 - val_loss: 0.1433 - val_acc: 0.9385\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f9e7d0fb940>"
+       "<keras.callbacks.History at 0x7f9e79354d68>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11200/11430 [============================>.] - ETA: 0s"
+      "10848/11430 [===========================>..] - ETA: 0s"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "(11430,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "4  31554679         0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "{0, 1}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
